# TWins

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  sonar-project.properties
.github/workflows/: cmake.yml
demo/: CMakeLists.txt
demo/inc/: demo_theme.hpp  demo_wnd.hpp  twins_theme.hpp
demo/src/: demo.cpp  demo_wnd.cpp
doc/: term_test.c  test-colors.sh  test-keys.py
lib/: CMakeLists.txt
lib/inc/: terminal_codes.h  twins.hpp  twins_cli.hpp  twins_common.hpp  twins_esc_codes.hpp  twins_glob.hpp  twins_gui.hpp  twins_hash.hpp  twins_input_posix.hpp  twins_ios_defimpl.hpp  twins_map.hpp  twins_pal_defimpl.hpp  twins_queue.hpp  twins_ringbuffer.hpp  twins_stack.hpp  twins_string.hpp  twins_string_buff.hpp  twins_transform_window.hpp  twins_ui_mngr.hpp  twins_utf8str.hpp  twins_utils.hpp  twins_vector.hpp  twins_window_mngr.hpp  twins_window_state.hpp  twins_window_state_base.hpp  twins_wndstack.hpp
lib/src/: twins.cpp  twins_ansi_esc_decoder.cpp  twins_cli.cpp  twins_colors.cpp  twins_input_decoder.cpp  twins_input_posix.cpp  twins_string.cpp  twins_utf8str.cpp  twins_utils.cpp  twins_widget.cpp  twins_widget_draw.cpp  twins_widget_prv.hpp  twins_window_mngr.cpp
lib/tests/: CMakeLists.txt
lib/tests/src/: main.cpp  t_main.cpp  test_ansi_esc_decoder.cpp  test_cli.cpp  test_input_decoder.cpp  test_input_posix.cpp  test_main.cpp  test_map.cpp  test_queue.cpp  test_stack.cpp  test_string.cpp  test_twins.cpp  test_utils.cpp  test_vector.cpp  test_widget.cpp  test_widget_draw.cpp
tests/: CMakeLists.txt
tests/src/: test_cli.cpp  test_input_posix.cpp  test_main.cpp  test_map.cpp  test_string.cpp  test_twins.cpp  test_utils.cpp  test_vector.cpp  test_widget.cpp
